--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; url=qin.html" />
+  <meta http-equiv="refresh" content="0; url=qin/qin.html" />
   <meta charset="UTF-8">
   <title>Redirecting…</title>
 </head>
 <body>
-  <p>If you are not redirected, <a href="qin.html">click here to play the Qin game</a>.</p>
+  <p>If you are not redirected, <a href="qin/qin.html">click here</a>.</p>
 </body>
 </html>
